Fixing menu on IE8

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -979,7 +979,7 @@ code input {
 #manage-enterprises .simplemenu-submenu {
   text-align: left;
   left: -20px;
-  width: 190px;
+  width: 200px;
 }
 #manage-enterprises .simplemenu-item {
   padding: 5px 0;
@@ -990,6 +990,12 @@ code input {
 }
 #manage-enterprises .simplemenu-item a span {
   display: none;
+}
+.msie8 #manage-enterprises-link { /* IE8 hack */
+   border: 0px solid;
+}
+.msie8 #manage-enterprises .simplemenu-submenu {
+  top: 16px;
 }
 
 #article {
